      csp_CPDIR are no longer honored, see /usr/share/doc/caspar/NEWS.gz.
    - debian/copyright: updated.
  * debian/rules: no longer inspect DEB_BUILD_OPTIONS for "debug" or
    "nostrip": we are arch independent
  * debian/control: update my name.
  * debian/caspar-doc.doc-base.caspar-typesetting: fix spelling error
    (thanks lintian).

 -- Joost van Baal-Ilić <joostvb@debian.org>  Thu, 12 Apr 2012 23:44:44 +0200

caspar (20101204-1) unstable; urgency=low

  * New upstream release.
  * Remove obsolete CVS tags.
  * debian/control: bumped Standards-Version: from 3.8.3 to 3.9.1 (no
    changes needed).
  * debian/{control,compat}: Bump debhelper from 5 to 7.
  * debian/rules: update debhelper usage: replace "$(MAKE) distclean" with
    dh_auto_clean, replace "dh_clean -k" with dh_prep.
  * debian/control: update Suggests to current packagenames: remove
    "gv | postscript-viewer" (since provided by ghostscript), replace now
    obsolete gs-common with ghostscript, replace texlive-base-bin by
    texlive-binaries.
  * debian/control: enhance description, mention puppet and cfengine.

 -- Joost van Baal <joostvb@debian.org>  Sat, 12 Feb 2011 01:21:45 +0100

caspar (20100624-1) unstable; urgency=low

  * New upstream bugfix release.
  * debian/source: Switch to dpkg-source 3.0 (quilt) format, per
    http://wiki.debian.org/Projects/DebSrc3.0# .

 -- Joost van Baal <joostvb@debian.org>  Thu, 24 Jun 2010 14:59:50 +0200

caspar (20100223-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    + Add Vcs-Git, now that upstream (and debian/) migrated from CVS to git.
    + Update obsolete < to << (thanks lintian)
    + Add missing ${misc:Depends} (thanks lintian)

 -- Joost van Baal <joostvb@debian.org>  Tue, 23 Feb 2010 17:28:43 +0100

caspar (20091115-1) unstable; urgency=low

  * New upstream release (missed: 20090926, 20091114).
  * Renamed caspar-doc.doc-base.csp_sucp to caspar-doc.doc-base.csp_helper.